--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+
+spring-data-couchbase_example.iml
+
+atlassian-ide-plugin.xml
+
+./.idea
